--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,10 +1,23 @@
 .center {
   justify-content: center;
+  align-items: center;
   display: flex;
-  height: 500px;
+  height: 200px;
+  width: 100%;
+  //border: 1px solid #2d2d2d;
 }
 
 .middle {
-  margin: auto;
-  width: 1000px;
+  margin: auto
+}
+
+//pastel color gradient text
+.text-gradient-pastel {
+  background: -webkit-linear-gradient(45deg, #ff9a9e, #fad0c4, #fad0c4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  font-size: 100px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
