--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -22,3 +22,10 @@
   font-size: 100px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+//text for copyright section
+.copyright-footer {
+  font-size: 10px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #bb8182;
+}
