--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,9 +57,9 @@
         <div style="display: flex">
           <div>
             <p>UniProtParserJS is developed by <a href="https://www.proteo.info" target="_blank">Toan Phung</a></p>
+            <p>UniProtParserJS' source code can be found <a href="https://github.com/noatgnu/uniprotparser-ng" target="_blank">here</a></p>
             <p>UniProtParserJS is licensed under <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a></p>
             <p>UniProtParserJS developement is supported by <a href="https://ppu.mrc.ac.uk" target="_blank">MRC-PPU</a> and <a href="https://www.michaeljfox.org/asap">ASAP</a></p>
-            <p>UniProtParserJS is built with <a href="https://angular.io" target="_blank">Angular</a> and <a href="https://material.angular.io" target="_blank">Angular Material</a></p>
             <p>UniProtParserJS uses public API provided by UniProt <a href="https://www.uniprot.org/help/api" target="_blank">UniProt API</a> through the <a href="https://github.com/noatgnu/uniprotparserjs">uniprotparserjs</a> Node.js package</p>
           </div>
         </div>
