--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,12 @@
         </mat-select>
       </mat-form-field>
     </form>
-    <button mat-raised-button color="primary" (click)="openColumnSelectionDialog()">Customize return fields</button>
+    <button mat-raised-button color="accent" (click)="openColumnSelectionDialog()">Customize return fields</button>
+    <div style="display: flex; justify-content: center">
+      <div style="padding: 20px">
+        <button mat-raised-button color="primary" (click)="submit()">Start</button>
+      </div>
+    </div>
   </div>
   <div *ngIf="!finished">
     <mat-progress-bar color="warn" mode="indeterminate"></mat-progress-bar>
@@ -85,9 +90,6 @@
 </div>
 
 <div class="center" *ngIf="currentTab !== 3">
-  <div style="margin: auto">
-    <button mat-raised-button color="primary" (click)="submit()">Start</button>
-  </div>
   <div style="margin: auto" *ngIf="df.count() > 0">
     <button mat-raised-button color="primary" (click)="download()">Download</button>
   </div>
